src/app/globals.scss
@font-face {
  font-family: 'Daydream';
  src: url('./fonts/Daydream.ttf') format('truetype'); 
}

@font-face {
  font-family: 'DigitalDisco';
  src: url('./fonts/DigitalDisco.ttf') format('truetype');
}

@font-face {
  font-family: 'VT323';
  src: url('./fonts/VT323-Regular.ttf') format('truetype');
}

* {
  box-sizing: border-box;
}

#appRoot {
  font-family: 'VT323', Arial, sans-serif;
  margin: 0;
  padding: 0;
  font-size: 1rem;
  white-space: pre-line;
  box-sizing: border-box;
  overflow: scroll;
  display: block !important;
}

@media (min-width: 576px) {
  #appRoot {
    h1 {
      font-size: 1.6875rem + .125rem;
    }

    .title-wrapper span {
      font-size: 1.125rem + .125rem;
    }

    .close-button {
      width: 25px;
      height: 25px;
      padding-right: 40px;
    }
  }
}

@media (min-width: 768px) {
  #appRoot {
    h1 {
      font-size: 1.6875rem + (.125rem * 2);
    }

    .title-wrapper span {
      font-size: 1.125rem + (.125rem * 2);
    }

    .pixel-corners--wrapper {
      max-width: 400px;
    }
  }
}

@media (min-width: 992px) {
  #appRoot {
    h1 {
      font-size: 1.6875rem + (.125rem * 3);;
    }
    
    .title-wrapper span {
      font-size: 1.125rem + (.125rem * 3);
    }

    .pixel-corners--wrapper {
      max-width: 500px;
    }

    #facePhoto {
      height: 110px;
      width: 110px;
    }
  }
}

@media (min-width: 1200px) {
  #appRoot {
    h1 {
      font-size: 1.6875rem + (.125rem * 4);
    }

    .title-wrapper span {
      font-size: 1.125rem + (.125rem * 4);
    }

    .close-button {
      width: 30px;
      height: 30px;
    }

    .body-text-font {
      font-size: 1.125rem + .125rem;
    }
  }
}

:root {
  --font-small: 0.75rem;
  --font-medium: 1.125rem;
  --font-large: 1.6875rem;
}

html, body {
  height: 100dvh; 
}

#appRoot {
  height: 100dvh;
}

body {
  overflow: auto;
}

.background-white {
  background-color: white;
}

.flex-row {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.flex-column {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.padding-bottom {
  padding-bottom: 20px;
}

.top-margin {
  margin-top: 10px;
}

.overflow {
  height: 100%;
  max-height: 80dvh;
  overflow-x: scroll;
}

.text-left-align {
  text-align: left;
}

.flex-justify-center {
  display: flex;
  justify-content: center;
}

.flex-justify-space-around {
  display: flex;
  justify-content: space-around;
}

.body-padding {
  padding: 0 15px 30px;
}

.body-text-font {
  font-family: 'VT323';
  color: #6f123f;
  font-size: var(--font-medium);
}

.gradient-text {
  color: transparent;
  background: linear-gradient(216deg, rgba(102,145,255,1) 0%, rgba(119,92,240,1) 25%, rgba(220,40,127,1) 50%, rgba(255,98,0,1) 75%, rgba(255,174,0,1) 100%);
  background-repeat: no-repeat;
  background-size: 200%;
  background-position: 0 0;
  background-clip: text;
  background-attachment: fixed;
  @extend .shimmer;
}

h1 {
  margin: 20px 0;
  font-family: 'Daydream';
  text-align: center;
  font-size: var(--font-large);
}

input:focus, 
input:focus-visible,
textarea:focus,
textarea:focus-visible {
  outline: #5E9ED6 solid 1px;
  outline-style: auto;
}

a:focus, 
a:focus-visible {
  outline: #5E9ED6 solid 1px;
  outline-style: auto;
  outline-offset: 3px;
}

.title-wrapper span {
  font-family: 'DigitalDisco';
  font-size: var(--font-medium);
  margin: 0;
}

.background {
  width: 100vw;
  min-height: 100dvh;
  background: linear-gradient(216deg, rgba(102,145,255,1) 0%, rgba(119,92,240,1) 25%, rgba(220,40,127,1) 50%, rgba(255,98,0,1) 75%, rgba(255,174,0,1) 100%);
  background-attachment: fixed;
  background-repeat: no-repeat;
  background-size: 200%;
  background-position: 0 0;
}

@keyframes shimmer {
  from {
    background-position: 0 0;
  }
  to {
    background-position: 100% 0;
  }
}

.shimmer {
  animation: shimmer 6s linear infinite alternate;
}

@keyframes pixelGrid {
  from {
    background-position: top left;
  }
  to {
    background-position: bottom right;
  }
}

.gird-shift::before {
  animation: pixelGrid 100s linear infinite alternate;
}

.background-pixel-grid {
  position: relative;
  width: 100vw;
  height: 100dvh;
  overflow: hidden;
  display: flex;
  flex-direction: column;
  justify-content: center;
 

  &::before {
    content: "";
    z-index: -1;
    position: absolute;
    left: 50%;
    top: 50%;
    width: 300%;
    height: 300%;
    background-image: url('./images/pixel-grid.png');
    background-attachment: initial;
    background-position: top left;
    transform:translate(-50%,-50%) rotate(-17deg);
    opacity: 20%;
  }
}

.container-wrapper {
  display: flex;
  justify-content: center;
  max-height: 80dvh;
  padding-top: 10px;
}

.file-name-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: space-between;

  #fileName {
    padding: 15px 0 15px 20px;
    margin: 0;
    font-size: var(--font-medium);
    text-transform: uppercase;
    color: white;
    font-family: 'VT323';
  }

  &::before {
    content: "";
    z-index: -1;
    position: fixed;
    top: 0;
    left: 0;
    @extend .background;
    @extend .shimmer
  }
}

.close-button {
  height: 20px;
  width: 20px;
  padding-right: 35px;
  background-image: url('./images/close-button.png');
  background-repeat: no-repeat;
  background-size: contain;
}

.title-wrapper {
  display: flex;
  align-items: center;
  margin: 0px 0px 5px;

  img {
    height: 24px;
    width: 24px;
    padding-right: 5px;
  }
}

.home-list {
  padding-inline-start: 0;
  margin: 0;
}
/* ... */

